# natiflect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  class.cpp  class.h  exception.cpp  exception.h  natiflect.h  object.cpp  object.h  object_template_explicit.h  utils.cpp  utils.h
jni/: CMakeLists.txt  natiflect  natiflect_test.cpp  natiflect_test.h
src/im/r_c/java/: InstanceMethodTest.java  Main.java  ObjectTest.java  StaticFieldTest.java
